--- a/PositionIn/Profile/PositionIn.ProfileInfoCell.xib
+++ b/PositionIn/Profile/PositionIn.ProfileInfoCell.xib
@@ -31,23 +31,67 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Qk-oJ-dDU" userLabel="LeftActionButton">
+                        <rect key="frame" x="90" y="20" width="30" height="30"/>
+                        <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="J06-Cg-o0N"/>
+                            <constraint firstAttribute="width" constant="30" id="sLz-2A-Ims"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="actionTapped:" destination="rxR-OP-zHP" eventType="touchUpInside" id="gT0-Lv-Nnd"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t72-XY-fLG" userLabel="RightActionButton">
+                        <rect key="frame" x="200" y="20" width="30" height="30"/>
+                        <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Jf9-He-bQF"/>
+                            <constraint firstAttribute="width" constant="30" id="T7w-8H-hLz"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="actionTapped:" destination="rxR-OP-zHP" eventType="touchUpInside" id="yQx-ou-CG1"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="t72-XY-fLG" firstAttribute="leading" secondItem="fcE-xS-ZvD" secondAttribute="trailing" constant="10" id="5di-lP-vSo"/>
                     <constraint firstAttribute="bottom" secondItem="S6i-kH-oJF" secondAttribute="bottom" id="7f9-cT-iEu"/>
                     <constraint firstItem="eVg-SR-uJt" firstAttribute="top" secondItem="fcE-xS-ZvD" secondAttribute="bottom" constant="5" id="CXO-zC-oaw"/>
+                    <constraint firstItem="fcE-xS-ZvD" firstAttribute="centerY" secondItem="8Qk-oJ-dDU" secondAttribute="centerY" id="F95-KC-tdH"/>
                     <constraint firstAttribute="trailing" secondItem="S6i-kH-oJF" secondAttribute="trailing" id="K62-rc-Ea7"/>
                     <constraint firstAttribute="bottom" secondItem="eVg-SR-uJt" secondAttribute="bottom" constant="5" id="Qw9-Wp-Mvs"/>
                     <constraint firstItem="fcE-xS-ZvD" firstAttribute="top" secondItem="l6k-cS-svb" secondAttribute="top" constant="5" id="TC1-Gc-ct4"/>
+                    <constraint firstItem="fcE-xS-ZvD" firstAttribute="centerY" secondItem="t72-XY-fLG" secondAttribute="centerY" id="U9Q-nb-yES"/>
                     <constraint firstItem="S6i-kH-oJF" firstAttribute="leading" secondItem="l6k-cS-svb" secondAttribute="leading" id="VUV-WT-6gr"/>
                     <constraint firstItem="eVg-SR-uJt" firstAttribute="centerX" secondItem="fcE-xS-ZvD" secondAttribute="centerX" id="Wwn-Ag-Np5"/>
                     <constraint firstItem="S6i-kH-oJF" firstAttribute="top" secondItem="l6k-cS-svb" secondAttribute="top" id="a8M-61-VjG"/>
                     <constraint firstAttribute="centerX" secondItem="fcE-xS-ZvD" secondAttribute="centerX" id="fgy-Ob-LWL"/>
+                    <constraint firstItem="fcE-xS-ZvD" firstAttribute="leading" secondItem="8Qk-oJ-dDU" secondAttribute="trailing" constant="10" id="hS3-dC-Ec9"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="avatarView" destination="fcE-xS-ZvD" id="dqt-Ye-CMr"/>
                 <outlet property="backImageView" destination="S6i-kH-oJF" id="rz6-8n-cYA"/>
+                <outlet property="leftActionButton" destination="8Qk-oJ-dDU" id="Eg1-gh-HM5"/>
                 <outlet property="nameLabel" destination="eVg-SR-uJt" id="O9m-JN-h68"/>
+                <outlet property="rightActionButton" destination="t72-XY-fLG" id="iev-W7-7rB"/>
             </connections>
             <point key="canvasLocation" x="408" y="230"/>
         </tableViewCell>
