--- a/PositionIn/People/PositionIn.PeopleListCell.xib
+++ b/PositionIn/People/PositionIn.PeopleListCell.xib
@@ -14,15 +14,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROF-js-UG0" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="59.5" height="59.5"/>
+                        <rect key="frame" x="10" y="10" width="39.5" height="39.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="ROF-js-UG0" secondAttribute="height" multiplier="1:1" id="CSZ-4p-3Dz"/>
-                            <constraint firstAttribute="width" constant="60" id="izp-qT-LD5"/>
+                            <constraint firstAttribute="width" constant="40" id="izp-qT-LD5"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7f-Ba-COO">
-                        <rect key="frame" x="64.5" y="20" width="250.5" height="19.5"/>
+                        <rect key="frame" x="59.5" y="20" width="255.5" height="19.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -32,12 +32,12 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ROF-js-UG0" secondAttribute="bottom" id="5hk-4N-UGO"/>
+                    <constraint firstAttribute="bottom" secondItem="ROF-js-UG0" secondAttribute="bottom" constant="10" id="5hk-4N-UGO"/>
                     <constraint firstAttribute="trailing" secondItem="v7f-Ba-COO" secondAttribute="trailing" constant="5" id="7vz-fZ-bBW"/>
-                    <constraint firstItem="v7f-Ba-COO" firstAttribute="leading" secondItem="ROF-js-UG0" secondAttribute="trailing" constant="5" id="FYu-rl-oDY"/>
+                    <constraint firstItem="v7f-Ba-COO" firstAttribute="leading" secondItem="ROF-js-UG0" secondAttribute="trailing" constant="10" id="FYu-rl-oDY"/>
                     <constraint firstAttribute="centerY" secondItem="v7f-Ba-COO" secondAttribute="centerY" id="NsT-8n-2FB"/>
-                    <constraint firstItem="ROF-js-UG0" firstAttribute="top" secondItem="TFc-Vu-PWQ" secondAttribute="top" id="cRm-AA-e97"/>
-                    <constraint firstItem="ROF-js-UG0" firstAttribute="leading" secondItem="TFc-Vu-PWQ" secondAttribute="leading" id="ibl-y7-gmD"/>
+                    <constraint firstItem="ROF-js-UG0" firstAttribute="top" secondItem="TFc-Vu-PWQ" secondAttribute="top" constant="10" id="cRm-AA-e97"/>
+                    <constraint firstItem="ROF-js-UG0" firstAttribute="leading" secondItem="TFc-Vu-PWQ" secondAttribute="leading" constant="10" id="ibl-y7-gmD"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
